jasper/force-app/main/default/objects/Order/fields/Accessories_CGST_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Accessories_CGST_Rollup__c</fullName>
    <label>Accessories CGST Rollup</label>
    <summarizedField>OrderItem.Accessories_CGST_Rollup__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>