jasper/force-app/main/default/objects/Order/fields/Accessories_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Discount_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Accessories/Parts Discount Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>