jasper/force-app/main/default/objects/Order/fields/Accessories_Discount_Description__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Discount_Description__c</fullName>
    <inlineHelpText>Discount will be added to the total price of accessories/ Parts.</inlineHelpText>
    <label>Accessories/Parts Discount Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>