jasper/force-app/main/default/objects/Order/fields/Accessories_IRN_No__c.field-meta.xml
<CustomField>
    <fullName>Accessories_IRN_No__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Accessories IRN No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>