jasper/force-app/main/default/objects/Order/fields/Accessories_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Net_Amount__c</fullName>
    <label>Accessories Net Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>