jasper/force-app/main/default/objects/Order/fields/Accessories_Parts_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Parts_Subtotal__c</fullName>
    <label>Accessories/Parts Subtotal</label>
    <summarizedField>OrderItem.Total_Price_including_offer__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Type__c</field>
        <operation>equals</operation>
        <value>Parts, Accessories</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>