jasper/force-app/main/default/objects/Order/fields/Account_source__c.field-meta.xml
<CustomField>
    <fullName>Account_source__c</fullName>
    <formula>TEXT( Account.AccountSource )</formula>
    <label>Account source</label>
    <type>Text</type>
</CustomField>