jasper/force-app/main/default/objects/Order/fields/ADD_On__c.field-meta.xml
<CustomField>
    <fullName>ADD_On__c</fullName>
    <label>Add-On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roadside Assistance cover</fullName>
                <label>Roadside Assistance Cover</label>
            </value>
            <value>
                <fullName>Engine Protection cover</fullName>
                <label>Engine Protection Cover</label>
            </value>
            <value>
                <fullName>Passenger cover</fullName>
                <label>Passenger Cover</label>
            </value>
            <value>
                <fullName>Tyre Protection cover</fullName>
                <label>Tyre Protection Cover</label>
            </value>
            <value>
                <fullName>Key Protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>