jasper/force-app/main/default/objects/Order/fields/Additional_Discount1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount1__c</fullName>
    <label>Additional Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>