jasper/force-app/main/default/objects/Order/fields/Additional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount__c</fullName>
    <label>Additional Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>