jasper/force-app/main/default/objects/Order/fields/Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Date__c</fullName>
    <label>Allocation Date</label>
    <type>Date</type>
    <description>Date a vehicle was first allocated to this order (Assigned_Vehicle__c set). Drives 5-day retail-urgency nudges.</description>
</CustomField>