jasper/force-app/main/default/objects/Order/fields/Allotment_In_Process_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Allotment_In_Process_File_URL__c</fullName>
    <label>Allotment In Process File URL</label>
    <type>Url</type>
</CustomField>