jasper/force-app/main/default/objects/Order/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval</label>
    <type>Checkbox</type>
</CustomField>