jasper/force-app/main/default/objects/Order/fields/Approval_Statuse__c.field-meta.xml
<CustomField>
    <fullName>Approval_Statuse__c</fullName>
    <formula>IF(
    ISPICKVAL(Approval_Statuses__c, &quot;Approved&quot;), &quot;Approved&quot;,
    IF(
        ISPICKVAL(Approval_Statuses__c, &quot;Rejected&quot;), &quot;Rejected&quot;,
        IF(
            ISPICKVAL(Approval_Statuses__c, &quot;Pending&quot;), &quot;Pending&quot;,
            &quot; &quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>