jasper/force-app/main/default/objects/Order/fields/ASM__c.field-meta.xml
<CustomField>
    <fullName>ASM__c</fullName>
    <formula>Owner:User.Manager.FirstName +&apos;&apos;+ Owner:User.Manager.LastName</formula>
    <label>ASM</label>
    <type>Text</type>
</CustomField>