jasper/force-app/main/default/objects/Order/fields/ASM_Comments__c.field-meta.xml
<CustomField>
    <fullName>ASM_Comments__c</fullName>
    <label>ASM Comments</label>
    <type>TextArea</type>
</CustomField>