jasper/force-app/main/default/objects/Order/fields/Assigned_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>PDI was not done for the assigned vehicle.</errorMessage>
        <filterItems>
            <field>Vehicle.PDI_Status_Pass__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>