jasper/force-app/main/default/objects/Order/fields/Base_Handling_Charges__c.field-meta.xml
<CustomField>
    <fullName>Base_Handling_Charges__c</fullName>
    <formula>IF(
    ISBLANK(Handling_Charges__c) || Handling_Charges__c = 0.00,
    0,
    Handling_Charges__c / 1.18
)</formula>
    <label>Base Handling Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>