jasper/force-app/main/default/objects/Order/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <formula>Assigned_Vehicle__r.Vehicle_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Battery</label>
    <type>Text</type>
</CustomField>