jasper/force-app/main/default/objects/Order/fields/Battery_Email__c.field-meta.xml
<CustomField>
    <fullName>Battery_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Battery Email</label>
    <type>Checkbox</type>
</CustomField>