jasper/force-app/main/default/objects/Order/fields/Battery_Number__c.field-meta.xml
<CustomField>
    <fullName>Battery_Number__c</fullName>
    <formula>Assigned_Vehicle__r.RR_Battery_Number__c</formula>
    <label>Battery Number</label>
    <type>Text</type>
</CustomField>