jasper/force-app/main/default/objects/Order/fields/Booking_Form_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_File_URL__c</fullName>
    <label>Booking Form File URL</label>
    <type>Url</type>
</CustomField>