jasper/force-app/main/default/objects/Order/fields/Booking_Partial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Booking_Partial_Payment__c</fullName>
    <label>Booking/Partial Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>