jasper/force-app/main/default/objects/Order/fields/Booking_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Payment_Id__c</fullName>
    <label>Booking Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>