jasper/force-app/main/default/objects/Order/fields/Can_Cancel_IRN__c.field-meta.xml
<CustomField>
    <fullName>Can_Cancel_IRN__c</fullName>
    <formula>NOW() - IRN_Generated_DateTime__c&lt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Cancel IRN?</label>
    <type>Checkbox</type>
</CustomField>