jasper/force-app/main/default/objects/Order/fields/Cancel_Order__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Order</label>
    <type>Checkbox</type>
</CustomField>