jasper/force-app/main/default/objects/Order/fields/Cancellation_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request_Status__c</fullName>
    <label>Cancellation Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>