jasper/force-app/main/default/objects/Order/fields/CGST_Amount_rollup__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount_rollup__c</fullName>
    <label>CGST Amount rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>