jasper/force-app/main/default/objects/Order/fields/Charger__c.field-meta.xml
<CustomField>
    <fullName>Charger__c</fullName>
    <formula>Assigned_Vehicle__r.Charger_PC_Number__c</formula>
    <label>Charger</label>
    <type>Text</type>
</CustomField>