jasper/force-app/main/default/objects/Order/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <formula>Assigned_Vehicle__r.Colour__c</formula>
    <label>Color</label>
    <type>Text</type>
</CustomField>