jasper/force-app/main/default/objects/Order/fields/Company_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Company_warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company warehouse</label>
    <type>Checkbox</type>
</CustomField>