jasper/force-app/main/default/objects/Order/fields/Dealer_name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_name__c</fullName>
    <formula>Dealer__r.Name</formula>
    <label>Dealer name</label>
    <type>Text</type>
</CustomField>