jasper/force-app/main/default/objects/Order/fields/Dealer_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Warehouse</label>
    <type>Checkbox</type>
</CustomField>