jasper/force-app/main/default/objects/Order/fields/Delivery_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Confirmed__c</fullName>
    <label>Delivery Confirmed by Customer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set when the customer confirms delivery via the WhatsApp "Confirm Delivery" button.</description>
</CustomField>