jasper/force-app/main/default/objects/Order/fields/Delivery_Confirmed_On__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Confirmed_On__c</fullName>
    <label>Delivery Confirmed On</label>
    <type>DateTime</type>
    <description>When the customer confirmed delivery via WhatsApp.</description>
</CustomField>