jasper/force-app/main/default/objects/Order/fields/Discount_on_Ex_Showroom_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_Ex_Showroom_Price__c</fullName>
    <label>Discount on Ex-Showroom Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>