jasper/force-app/main/default/objects/Order/fields/Discounted_Amount_on_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Amount_on_Accessories__c</fullName>
    <label>Discounted Amount on Accessories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>