jasper/force-app/main/default/objects/Order/fields/Eligible_For_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Subsidy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible For Subsidy</label>
    <type>Checkbox</type>
</CustomField>