jasper/force-app/main/default/objects/Order/fields/Extended_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Extended_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended Warranty</label>
    <type>Checkbox</type>
</CustomField>