jasper/force-app/main/default/objects/Order/fields/Feedback_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Form Sent</label>
    <type>Checkbox</type>
</CustomField>