jasper/force-app/main/default/objects/Order/fields/Final_Merchandise_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Merchandise_Amount__c</fullName>
    <formula>IF(
   ISBLANK(Total_Merchandise_RollUp__c) || Total_Merchandise_RollUp__c = 0.00,
   0,
   Total_Merchandise_RollUp__c - IF(ISBLANK(Merchandise_Additional_Discount__c), 0, Merchandise_Additional_Discount__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Merchandise Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>