jasper/force-app/main/default/objects/Order/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance</label>
    <referenceTo>Finance__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>