jasper/force-app/main/default/objects/Order/fields/Finance_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Name__c</fullName>
    <label>Finance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arihant Credit Corporation</fullName>
            </value>
            <value>
                <fullName>Bajaj Finance Limited</fullName>
            </value>
            <value>
                <fullName>Bank Of India</fullName>
            </value>
            <value>
                <fullName>Bank Of Maharashtra</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bike Bazaar</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Central Bank of India</fullName>
            </value>
            <value>
                <fullName>Ecofy Finance Private Limited</fullName>
            </value>
            <value>
                <fullName>Ernakulam District Police Credit Co-Operative Society LTD</fullName>
            </value>
            <value>
                <fullName>ESAF Small Finance Bank Ltd</fullName>
            </value>
            <value>
                <fullName>EVEREST FINANCE COMPANY</fullName>
            </value>
            <value>
                <fullName>FACT CD Employees Co-Operative Credit Society LTD</fullName>
            </value>
            <value>
                <fullName>Gadhinglaj urban co-opertive bank</fullName>
            </value>
            <value>
                <fullName>Greaves Finance Limited</fullName>
            </value>
            <value>
                <fullName>Hubballi Saraku SSPS Niyamit</fullName>
            </value>
            <value>
                <fullName>ICICI Bank Limited</fullName>
            </value>
            <value>
                <fullName>IDBI BANK LTD</fullName>
            </value>
            <value>
                <fullName>INDIAN BANK (BRANCH: HARBOUR)</fullName>
            </value>
            <value>
                <fullName>INDIAN BANK - MADHAVARAM BRANCH</fullName>
            </value>
            <value>
                <fullName>INDIAN OVERSEAS BANK</fullName>
            </value>
            <value>
                <fullName>J &amp; K Bank</fullName>
            </value>
            <value>
                <fullName>Janaseva Cooperative Credit Society Ltd</fullName>
            </value>
            <value>
                <fullName>Karnataka Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Karnataka Vikas Grameena Bank</fullName>
            </value>
            <value>
                <fullName>Kerala State Backward Classes Development Corporation Ltd.</fullName>
            </value>
            <value>
                <fullName>KERALA GRAMIN BANK</fullName>
            </value>
            <value>
                <fullName>Kodagu dcc bank Private limited</fullName>
            </value>
            <value>
                <fullName>LIC OF INDIA</fullName>
            </value>
            <value>
                <fullName>MDCC Bank Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>