jasper/force-app/main/default/objects/Order/fields/GSTIN_No__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_No__c</fullName>
    <formula>Account.GSTIN_Number__c</formula>
    <label>GSTIN No</label>
    <type>Text</type>
</CustomField>