jasper/force-app/main/default/objects/Order/fields/Handling_Charges__c.field-meta.xml
<CustomField>
    <fullName>Handling_Charges__c</fullName>
    <label>Handling Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>