jasper/force-app/main/default/objects/Order/fields/Internal_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Internal_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Purchase</label>
    <type>Checkbox</type>
</CustomField>