jasper/force-app/main/default/objects/Order/fields/Inventory_Error__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Error__c</fullName>
    <label>Inventory Error</label>
    <type>TextArea</type>
</CustomField>