jasper/force-app/main/default/objects/Order/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <displayFormat>RIVER{000}</displayFormat>
    <externalId>true</externalId>
    <label>Invoice No</label>
    <type>AutoNumber</type>
</CustomField>