jasper/force-app/main/default/objects/Order/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Other Charges Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>