jasper/force-app/main/default/objects/Order/fields/IRN_Generated_DateTime__c.field-meta.xml
<CustomField>
    <fullName>IRN_Generated_DateTime__c</fullName>
    <label>IRN Generated DateTime</label>
    <type>DateTime</type>
</CustomField>