jasper/force-app/main/default/objects/Order/fields/Is_DC_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_DC_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is DC Generated</label>
    <type>Checkbox</type>
</CustomField>