jasper/force-app/main/default/objects/Order/fields/Is_E_invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_E_invoice_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is E-invoice Generated?</label>
    <type>Checkbox</type>
</CustomField>