jasper/force-app/main/default/objects/Order/fields/Is_IGST_on_Intrastate__c.field-meta.xml
<CustomField>
    <fullName>Is_IGST_on_Intrastate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is IGST on Intrastate</label>
    <type>Checkbox</type>
</CustomField>