jasper/force-app/main/default/objects/Order/fields/Is_Integration__c.field-meta.xml
<CustomField>
    <fullName>Is_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Integration</label>
    <type>Checkbox</type>
</CustomField>