jasper/force-app/main/default/objects/Order/fields/Is_Invoice_PDF_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoice_PDF_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoice PDF Generated</label>
    <type>Checkbox</type>
</CustomField>