jasper/force-app/main/default/objects/Order/fields/Is_InvoiceTaged__c.field-meta.xml
<CustomField>
    <fullName>Is_InvoiceTaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is InvoiceTaged?</label>
    <type>Checkbox</type>
</CustomField>