jasper/force-app/main/default/objects/Order/fields/Is_IRN_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_IRN_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is IRN Cancelled?</label>
    <type>Checkbox</type>
</CustomField>