jasper/force-app/main/default/objects/Order/fields/Is_Not_Blank_IRN__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Blank_IRN__c</fullName>
    <formula>NOT(ISBLANK(IRN_No__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Not Blank IRN?</label>
    <type>Checkbox</type>
</CustomField>