jasper/force-app/main/default/objects/Order/fields/IS_OCT_Generated__c.field-meta.xml
<CustomField>
    <fullName>IS_OCT_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS OCT Generated</label>
    <type>Checkbox</type>
</CustomField>