jasper/force-app/main/default/objects/Order/fields/Is_QR_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_QR_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is QR Generated?</label>
    <type>Checkbox</type>
</CustomField>