jasper/force-app/main/default/objects/Order/fields/Is_RTO_and_IR_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_RTO_and_IR_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is RTO and IR Generated</label>
    <type>Checkbox</type>
</CustomField>