jasper/force-app/main/default/objects/Order/fields/Is_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Is_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Transfer</label>
    <type>Checkbox</type>
</CustomField>