jasper/force-app/main/default/objects/Order/fields/Is_Vehicle_Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Vehicle_Invoice_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Vehicle Invoice Generated</label>
    <type>Checkbox</type>
</CustomField>