jasper/force-app/main/default/objects/Order/fields/IsAccessories_Generated__c.field-meta.xml
<CustomField>
    <fullName>IsAccessories_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAccessories Generated</label>
    <type>Checkbox</type>
</CustomField>