jasper/force-app/main/default/objects/Order/fields/IsAmount_Paid__c.field-meta.xml
<CustomField>
    <fullName>IsAmount_Paid__c</fullName>
    <formula>Remaining_Amount__c = Total_Log_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsAmount Paid</label>
    <type>Checkbox</type>
</CustomField>