jasper/force-app/main/default/objects/Order/fields/IsBackOrder__c.field-meta.xml
<CustomField>
    <fullName>IsBackOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBackOrder</label>
    <type>Checkbox</type>
</CustomField>