jasper/force-app/main/default/objects/Order/fields/IsMerchandise_Generated__c.field-meta.xml
<CustomField>
    <fullName>IsMerchandise_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMerchandise Generated</label>
    <type>Checkbox</type>
</CustomField>