jasper/force-app/main/default/objects/Order/fields/IsOrderInvoicesGenerated__c.field-meta.xml
<CustomField>
    <fullName>IsOrderInvoicesGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOrderInvoicesGenerated</label>
    <type>Checkbox</type>
</CustomField>