jasper/force-app/main/default/objects/Order/fields/isRSA__c.field-meta.xml
<CustomField>
    <fullName>isRSA__c</fullName>
    <formula>Assigned_Vehicle__r.RSA_Activation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isRSA</label>
    <type>Checkbox</type>
</CustomField>