jasper/force-app/main/default/objects/Order/fields/IsVOR__c.field-meta.xml
<CustomField>
    <fullName>IsVOR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is VOR</label>
    <type>Checkbox</type>
</CustomField>