jasper/force-app/main/default/objects/Order/fields/LineItem_Merchandise_Disccount__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Merchandise_Disccount__c</fullName>
    <label>LineItem Merchandise Disccount</label>
    <summarizedField>OrderItem.Merchandise_Disccount_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Type__c</field>
        <operation>equals</operation>
        <value>Merchandise</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>